--- a/AI_industry_trends.html
+++ b/AI_industry_trends.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>GRUZAM - Inside Out</title>
+  <title>GRUZAM - AI Industry Trends</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
 
@@ -29,7 +29,7 @@
     <font size="6">INVENTORY</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Inside_out.html" class="inactive">Inside Out</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
     <br>
     <font size="6">STATUS</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
@@ -49,6 +49,10 @@
 
     <h1>AI Industry Trends</h1><br><br><br>
 
+
+
+    <a href="https://www.youtube.com/watch?v=K_Mh21P9OwA" target="_blank" title="edureka!">
+      Top 10 Artificial Intelligence Technologies in 2020</a><br>
 
     <a href="https://www.youtube.com/watch?v=B2U8ZIopCnI" target="_blank" title="체인지그라운드">
       인공지능이 인류를 위협할 3가지 이유</a><br>
@@ -160,7 +164,7 @@
         <font size="6">INVENTORY</font>
         <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
         <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Inside_out.html" class="inactive">Inside Out</a></li>
+        <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
         <br>
         <font size="6">STATUS</font>
         <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
