--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -29,7 +29,7 @@
     <font size="6">INVENTORY</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="active">Karazhan Library</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Inside_out.html" class="inactive">Inside Out</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
     <br>
     <font size="6">STATUS</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
@@ -77,7 +77,8 @@
       [삶이 괴롭냐고 심리학이 물었다]-게일 브레너
     <h3><strong>처세술</h3></strong>
       [침묵이라는 무기]-코르넬리아 토프<br>
-      [마음을 훔치는 대화법]-임철웅
+      [마음을 훔치는 대화법]-임철웅<br>
+      [호감 가는 대화에는 8가지 절대법칙이 있다]-스쿤
     <h3><strong>과학</h3></strong>
       [창조하는 뇌]-데이비드 이글먼, 앤서니 브란트<br>
       [기억은 미래로 향한다]-한나 모니어, 마르틴 게스만
@@ -98,7 +99,7 @@
         <li>경제/경영: [채리티:워터]-스캇 해리슨</li>
         <li>역사:</li>
         <li>철학:</li>
-        <li>심리학/처세술:</li>
+        <li>심리학/처세술: [호감 가는 대화에는 8가지 절대법칙이 있다]-스쿤</li>
         <li>과학:</li>
     </p></pre>
 
@@ -152,7 +153,7 @@
       <font size="6">INVENTORY</font>
       <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
       <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="active">Karazhan Library</a></li>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="Inside_out.html" class="inactive">Inside Out</a></li>
+      <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
       <br>
       <font size="6">STATUS</font>
       <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
