--- a/Science_and_technology.html
+++ b/Science_and_technology.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>GRUZAM - Youtube Study</title>
+  <title>GRUZAM - Scence and Technology</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
 
@@ -29,7 +29,7 @@
     <font size="6">INVENTORY</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Inside_out.html" class="inactive">Inside Out</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
     <br>
     <font size="6">STATUS</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
@@ -50,6 +50,27 @@
   <h1>Science & Technology</h1><br><br><br>
 
 
+
+    <a href="https://www.youtube.com/watch?v=yP9QH7Yj0bw" target="_blank" title="신박과학">
+      올 여름, 과학자들은 평행 우주의 입구를 찾는다</a><br>
+
+    <a href="https://www.youtube.com/watch?v=EzrzMTi9coA" target="_blank" title="신박과학">
+      어떠한 가설로도 설명되지 않는 별"HD 139139"</a><br>
+
+    <a href="https://www.youtube.com/watch?v=soZzeg03tqo" target="_blank" title="에스오디">
+      우주는 우리를 이미 알고 있는 것 같다</a><br>
+
+    <a href="https://www.youtube.com/watch?v=x_Kijtg27tA" target="_blank" title="1분과학">
+      수란 무엇인가! (우주는 수로 이루어져 있다!?)</a><br>
+
+    <a href="https://www.youtube.com/watch?v=-_ICi9Yjdrc" target="_blank" title="1분과학">
+      스트레스의 놀라운 반전!!</a><br>
+
+    <a href="https://www.youtube.com/watch?v=fPibvyWrFBo" target="_blank" title="신박과학">
+      과학자들도 처음보는 이상한 중력파가 감지되었다</a><br>
+
+    <a href="https://www.youtube.com/watch?v=8G5O5jDzoD8" target="_blank" title="신박과학">
+      시공간을 뒤틀고 있는 백색 왜성이 관측되었다</a><br>
 
     <a href="https://www.youtube.com/watch?v=MqNlqv1yPqk" target="_blank" title="안된과학">
       양자컴퓨터 한방정리</a><br>
@@ -75,7 +96,7 @@
     <font size="6">INVENTORY</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Inside_out.html" class="inactive">Inside Out</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
     <br>
     <font size="6">STATUS</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
