--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -29,7 +29,7 @@
     <font size="6">INVENTORY</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Inside_out.html" class="inactive">Inside Out</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
     <br>
     <font size="6">STATUS</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
@@ -48,6 +48,27 @@
     <img src="Stock_exchange_chart.jpg" width="100%">
 
     <h1>Stock Investment</h1><br><br><br>
+
+
+    <a href="https://www.youtube.com/watch?v=13Bve9a_X2Q" taregt="_blank" target="시간여행TV">
+      우리기술투자 1억원 수익실현, 투자아이디어</a>
+
+      <p>
+        시가총액 2천억 이상의 종목들은
+        아무리 좋은 호재가 있어도 상한가 가는게 그리 쉽지는 않더라고요.
+
+        창업투자 회사들이 좋다고 생각해요.
+        2가지 측면이 있는데 첫 번째로 대선 테마주로 일자리 테마주를 보면
+        다들 창업 투자 회사들을 일자리 테마주로 분류를 하더라고요.
+        일자리 테마주로도 각광을 받을 것 같고,
+        코스닥 상장이 성장성 위주로 쉬워지면서
+        앞으로는 벤처캐피탈 회사들이 투자한 회사들이 더 성장할 가능성이 높아졌고,
+        이 2가지 아이디어를 통해 벤처캐피탈 회사에 투자를 해야겠다는 생각을 했어요.
+        벤처회사들 중에서 미래의 실적은 그 회사가 지금까지 어떤 안목을 가지고 투자했는지를 보면 되잖아요.
+        저 같은 경우에는 우리기술투자가 벤처회사들 중에서
+        좋은 스타트업에 투자를 해서 수익실현을 하는 것 같다고 생각했어요.
+      </p>
+
 
 
     <a href="https://www.youtube.com/watch?v=zLPW36pmpjQ" target="_blank" title="시간여행TV">
@@ -1463,7 +1484,7 @@
           <font size="6">INVENTORY</font>
           <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
           <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-          <li style="margin-top:10px; margin-bottom:10px;"><a href="Inside_out.html" class="inactive">Inside Out</a></li>
+          <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
           <br>
           <font size="6">STATUS</font>
           <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
