--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>GRUZAM - Stock Investment</title>
+  <title>GRUZAM - Strtegy and Tactics</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
 
@@ -29,7 +29,7 @@
     <font size="6">INVENTORY</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Inside_out.html" class="inactive">Inside Out</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
     <br>
     <font size="6">STATUS</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
@@ -49,6 +49,56 @@
 
     <h1>Strategy & Tactics</h1><br><br><br>
 
+    <a href="https://www.youtube.com/watch?v=zADn1a0rzr8" target="_blank" title="별별역사">
+      알렉산더 대왕의 정복전쟁(2) : 페르시아 정복과 원정의 결말</a><br>
+
+    <a href="https://www.youtube.com/watch?v=bWsR2oX57es" target="_blank" title="별별역사">
+      알렉산더 대왕의 정복전쟁(1) : 페르시아 원정 개전</a><br>
+
+    <a href="https://www.youtube.com/watch?v=ppfgydDyNEs&t=675s" target="_blank" title="슈퍼노바TV">
+      [스타2] 테란으로 배치부터 마스터까지! 추천 빌드, 꿀팁 대방출 #1</a><br>
+
+    <a href="https://www.youtube.com/watch?v=OCbQNpT3Vrw&t=10s" target="_blank" title="슈퍼노바TV">
+      [스타2] 프로게이머가 알려주는 테란 단축키설정 및 부대지정법!</a><br>
+
+    <a href="https://www.youtube.com/watch?v=E_4rmahirZI&t=4s" target="_blank" title="신희범(히밤튜브)">
+      [스타2] 프로게이머가 알려주는 저그 단축키 + 부대지정 어떻게 하는게 좋을까?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=sErjbtVbxlE" target="_blank" title="쉬운바둑">
+      [바둑] [2선 한칸침투] 요즘 많이 안쓰는 이유가 있어요. 가장 좋은 응수는?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=24OBsqysdIg&t=995s" target="_blank" title="신희범(히밤튜브)">
+      [스타2] 언랭에서 다이아까지 테란으로 가보자</a><br>
+
+    <a href="https://www.youtube.com/watch?v=d56LsoFuPis&t=408s" target="_blank" title="슈퍼노바TV">
+      [스타2] 대회에서 보여주는 테란의 저그전 메카닉 운영의 정석!</a><br>
+
+    <a href="https://www.youtube.com/watch?v=p1lYTd4pizg" target="_blank" title="신희범(히밤튜브)">
+      [스타2] 초보자들을 위한 유용한 단축키 + 팁</a><br>
+
+    <a href="https://www.youtube.com/watch?v=XviuK5Sc3NY&t=740s" target="_blank" title="크랭크의 스타2">
+      [스타2] 한국 vs 핀란드 - 네이션 워즈 2019 결승</a><br>
+
+    <a href="https://www.youtube.com/watch?v=kiAnner-sUE&t=286s" target="_blank" title="신희범(히밤튜브)">
+      [스타2] [그마 래더] 토스전에 울트라 뽑아봤습니다</a><br>
+
+    <a href="https://www.youtube.com/watch?v=uDvJsHB_Pp0" target="_blank" title="슈퍼노바TV">
+      [스타2] 저그가 사기인 이유?! 군단숙주와 땅굴이면 모든게 해결된다!!</a><br>
+
+    <a href="https://www.youtube.com/watch?v=R9HoxHNBT3Y&t=880s" target="_blank" title="김성룡 바둑랩">
+      [바둑] [붙여막기정석] 이창호정석 한방에 공부하기</a><br>
+
+    <a href="https://www.youtube.com/watch?v=X3912sPYOHc&t=2s" target="_blank" title="김성룡 바둑랩">
+      [바둑] 화점정석 이후 침투대처 꿀팁</a><br>
+
+    <a href="https://www.youtube.com/watch?v=d5Y7BBc4Nlo" target="_blank" title="김성룡 바둑랩">
+      [바둑] [백의 3.3침입] 딱! 이거하나만 알면 걱정 끄읕!</a><br>
+
+    <a href="https://www.youtube.com/watch?v=mYSdqOPPjqo" target="_blank" title="김성룡 바둑랩">
+      [바둑] 제3회 용성전 32강전 신진서 VS 최정 하이라이트</a><br>
+
+    <a href="https://www.youtube.com/watch?v=6PkL-MsBKQM" target="_blank" title="김성룡 바둑랩">
+      [바둑] 2020. 2.5 빅매치 최정 vs 구링이</a><br>
 
     <a href="https://www.youtube.com/watch?v=Cvlisl5ud0E" target="_blank" title="국방TV">
       판도를 바꾼 작전사</a><br>
@@ -66,7 +116,7 @@
         <font size="6">INVENTORY</font>
         <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
         <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Inside_out.html" class="inactive">Inside Out</a></li>
+        <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
         <br>
         <font size="6">STATUS</font>
         <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
