--- a/The_economist.html
+++ b/The_economist.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>GRUZAM - Youtube Study</title>
+  <title>GRUZAM - The Economist</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
 
@@ -29,7 +29,7 @@
     <font size="6">INVENTORY</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Inside_out.html" class="inactive">Inside Out</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
     <br>
     <font size="6">STATUS</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
@@ -51,62 +51,61 @@
 
 
 
-  <h2>슈카월드</h2>
+  <a href="https://www.youtube.com/watch?v=tuoaZfuIi_Y" target="_blank" title="미스터리튜브">
+    중국이 급속도로 붕괴되고 있다 - 처참하게 파멸중인 중국, 사회주의의 말로</a><br>
 
-
-
-  <a href="https://www.youtube.com/watch?v=6dp4E5HIpRU" target="_blank" title="반도체시장">
+  <a href="https://www.youtube.com/watch?v=6dp4E5HIpRU" target="_blank" title="슈카월드">
     AMD와 인텔의 반백년 전쟁과 2020년 불타오르는 반도체시장</a><br>
 
-  <a href="https://www.youtube.com/watch?v=UzqtGVG1vFs" target="_blank" title="우리나라 자전거">
+  <a href="https://www.youtube.com/watch?v=UzqtGVG1vFs" target="_blank" title="슈카월드">
     고전하고 있는 우리나라 자전거와 희망</a><br>
 
-  <a href="https://www.youtube.com/watch?v=QZFDZeqbp4g&t=0s" target="_blank" title="수요부족사회">
+  <a href="https://www.youtube.com/watch?v=QZFDZeqbp4g&t=0s" target="_blank" title="슈카월드">
     '수요'부족 사회, 성장을 향한 우리의 해법은 있을까?</a><br>
 
-  <a href="https://www.youtube.com/watch?v=jA5zMiXjcK4&t=0s" target="_blank" title="디즈니">
+  <a href="https://www.youtube.com/watch?v=jA5zMiXjcK4&t=0s" target="_blank" title="슈카월드">
     야심차게 모아온 디즈니의 원기옥, 디즈니 플러스+ 문을 열다</a><br>
 
-  <a href="https://www.youtube.com/watch?v=W-ZARauLKc8" target="_blank" title="블록체인">
+  <a href="https://www.youtube.com/watch?v=W-ZARauLKc8" target="_blank" title="슈카월드">
     블록체인 기술이 꿈꾸는 미래시장 거래 시스템의 변화</a><br>
 
-  <a href="https://www.youtube.com/watch?v=j7ziZoxpb6M" target="_blank" title="메인사이트">
+  <a href="https://www.youtube.com/watch?v=j7ziZoxpb6M" target="_blank" title="슈카월드">
     메인사이트의 다변화와 이커머스 시장의 Hot 키워드-컨텐츠, 커뮤니티</a><br>
 
-  <a href="https://www.youtube.com/watch?v=vMgcTTE_YQI" target="_blank" title="불닭볶음면">
+  <a href="https://www.youtube.com/watch?v=vMgcTTE_YQI" target="_blank" title="슈카월드">
     한국산 불닭볶음면, 세계 라면계를 강타하다!?</a><br>
 
   <a href="https://www.youtube.com/watch?v=A_J1CkJyyfA" target="_blank" title="한국바이오">
     한국 바이오, 그 예측불허한 시장과 우리의 희망</a><br>
 
-  <a href="https://www.youtube.com/watch?v=EyZxjHe0B8w" target="_blank" title="미국대선">
+  <a href="https://www.youtube.com/watch?v=EyZxjHe0B8w" target="_blank" title="슈카월드">
     미국 대선레이스 시작! 쟁점이 되는 "자격주의 사회"</a><br>
 
-  <a href="https://www.youtube.com/watch?v=jW08SZiiZb4" target="_blank" title="렌즈">
+  <a href="https://www.youtube.com/watch?v=jW08SZiiZb4" target="_blank" title="슈카월드">
     한국 남성 근시율 96.5%!? 이만하면 렌즈도 우리나라가 최강 아닙니까?</a><br>
 
-  <a href="https://www.youtube.com/watch?v=lyW4eN2tvrQ" target="_blank" title="블랙머니">
+  <a href="https://www.youtube.com/watch?v=lyW4eN2tvrQ" target="_blank" title="슈카월드">
     아찔했던 순간.. 대한민국, 리만 브라더스 인수를 시도하다</a><br>
 
-  <a href="https://www.youtube.com/watch?v=Gs_hEnwIQXE" target="_blank" title="인도 시장">
+  <a href="https://www.youtube.com/watch?v=Gs_hEnwIQXE" target="_blank" title="슈카월드">
     잠에서 깨어난 인도 시장, 기회를 포착하고 달려드는 글로벌 맹수들</a><br>
 
-  <a href="https://www.youtube.com/watch?v=qjLlBBvnQR0" target="_blank" title="미중갈등">
+  <a href="https://www.youtube.com/watch?v=qjLlBBvnQR0" target="_blank" title="슈카월드">
     미중 갈등으로 전략을 수정중인 중국, 급속도로 한국과 닮아간다?<a><br>
 
-  <a href="https://www.youtube.com/watch?v=R_aM2U5YQAs" target="_blank" title="AI">
+  <a href="https://www.youtube.com/watch?v=R_aM2U5YQAs" target="_blank" title="슈카월드">
     AI, AI, AI 우리가 가야할 길?</a><br>
 
-  <a href="https://www.youtube.com/watch?v=uhqFaT0YI1w&t=179s" target="_blank" title="주식 투자 지표">
+  <a href="https://www.youtube.com/watch?v=uhqFaT0YI1w&t=179s" target="_blank" title="슈카월드">
     중학생도 이해가능한 '주식 투자 지표'와 워런버핏 형의 2대 원칙</a><br>
 
-  <a href="https://www.youtube.com/watch?v=smUArH8tZRc&list=PLJPjg3It2DXQUdlAocHh5FASozqwtJavv&index=17" target="_blank" title="페북떡락">
+  <a href="https://www.youtube.com/watch?v=smUArH8tZRc&list=PLJPjg3It2DXQUdlAocHh5FASozqwtJavv&index=17" target="_blank" title="슈카월드">
     페이스북facebook 사상 최대치 떡락..이유는??</a><br>
 
-  <a href="https://www.youtube.com/watch?v=voSZmyvKzqE&list=PLJPjg3It2DXQUdlAocHh5FASozqwtJavv&index=12" target="_blank" title="먼깨달음?">
+  <a href="https://www.youtube.com/watch?v=voSZmyvKzqE&list=PLJPjg3It2DXQUdlAocHh5FASozqwtJavv&index=12" target="_blank" title="슈카월드">
     18년 구글플레이 상반기 매출순위를 보고 얻은 깨달음</a><br>
 
-  <a href="https://www.youtube.com/watch?v=uwsxI-4UgKo" target="_blank" title="궁금하면 눌러봐">
+  <a href="https://www.youtube.com/watch?v=uwsxI-4UgKo" target="_blank" title="슈카월드">
     제목만 봐도 귀에 들렸던 국민곡이 사라지고 있다? 파편화되는 음악 시장</a><br>
 
 
@@ -121,7 +120,7 @@
     <font size="6">INVENTORY</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Inside_out.html" class="inactive">Inside Out</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
     <br>
     <font size="6">STATUS</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
