--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div>
           <li style="background-color:#1B2631; margin-top:3px; margin-bottom:3px;"><a href="Show_yourself.html" class="inactive" style="color:#1B4F72">Show Yourself</a></li>
           <li style="background-color:#1B2631; margin-top:3px; margin-bottom:3px;"><a href="Karazhan_library.html" class="inactive" style="color:#1B4F72">Karazhan Library</a></li>
-          <li style="background-color:#1B2631; margin-top:3px; margin-bottom:3px;"><a href="Inside_out.html" class="inactive" style="color:#1B4F72">Inside Out</a></li>
+          <li style="background-color:#1B2631; margin-top:3px; margin-bottom:3px;"><a href="懲毖錄.html" class="inactive" style="color:#1B4F72">懲毖錄</a></li>
         </div>
     </ul>
     <ul class="column2" align="center" style="font-size: 25px; background-color:#2874A6; list-style: none; margin-top:0px; margin-bottom:0px;">
