--- a/夫學須靜也_才須學也.html
+++ b/夫學須靜也_才須學也.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>GRUZAM - Stock Investment</title>
+  <title>GRUZAM - 夫學須靜也 才須學也</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
 
@@ -29,7 +29,7 @@
     <font size="6">INVENTORY</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Inside_out.html" class="inactive">Inside Out</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
     <br>
     <font size="6">STATUS</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
@@ -76,7 +76,7 @@
         <font size="6">INVENTORY</font>
         <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
         <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Inside_out.html" class="inactive">Inside Out</a></li>
+        <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
         <br>
         <font size="6">STATUS</font>
         <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
