--- a/AI_industry_trends.html
+++ b/AI_industry_trends.html
@@ -51,6 +51,9 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=KezI_Lqnj5Q" target="_blank" title="TSP NEWS">
+      일론 머스크의 Neuralink, 뇌를 인터넷에 무선연결하는 첨단기술</a><br>
+
     <a href="https://www.youtube.com/watch?v=K_Mh21P9OwA" target="_blank" title="edureka!">
       Top 10 Artificial Intelligence Technologies in 2020</a><br>
 
