--- a/Game_industry_trends.html
+++ b/Game_industry_trends.html
@@ -50,6 +50,10 @@
     <h1>Game Industry Trends</h1><br><br><br>
 
 
+
+    <a href="https://www.youtube.com/watch?v=sGQz1Va9nMs" target="_blank" title="흑열전구">
+      충격적인 평점 0.5점 짜리 게임, 워크래프트 3 : 리포지드</a><br>
+
     <a href="https://www.youtube.com/watch?v=lt0ug4LO_jc" target="_blank" title="집마 홀릭TV">
       어른들을 위한 최고의 명작 게임 오픈월드편 TOP10</a><br>
 
