--- a/Science_and_technology.html
+++ b/Science_and_technology.html
@@ -51,6 +51,21 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=SBpl3ThhhaI" target="_blank" title="1분과학">
+      다함께 만드는 신</a><br>
+
+    <a href="https://www.youtube.com/watch?v=xEuIp5U3vBs" target="_blank" title="에스오디">
+      대부분의 사람들이 죽을 때까지 알아차리지 못하는 것</a><br>
+
+    <a href="https://www.youtube.com/watch?v=pE1C0fyW_Hc" target="_blank" title="안될과학">
+      우리는 이 빛의 존재조차 몰랐다!? 테라헤르츠 한 방 정리!</a><br>
+
+    <a href="https://www.youtube.com/watch?v=GYDZoZt_ZMA" target="_blank" title="에스오디">
+      역사상 최초로 포착된 시간과 공간을 뛰어넘는 장면</a><br>
+
+    <a href="https://www.youtube.com/watch?v=OOSOHxw-YxQ" target="_blank" title="지식보관소">
+      오랜 수수께끼였던 공룡의 멸종원인이 밝혀졌다</a><br>
+
     <a href="https://www.youtube.com/watch?v=yP9QH7Yj0bw" target="_blank" title="신박과학">
       올 여름, 과학자들은 평행 우주의 입구를 찾는다</a><br>
 
