--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -50,6 +50,11 @@
     <h1>Show Yourself</h1><br><br><br>
 
 
+
+
+    <a href="https://www.youtube.com/watch?v=U8Bx8Y6LHZU" target="_blank" title="더나은삶TV">
+      모든 종교를 하나로 연결하여 얻은 미친 지혜</a><br>
+
     <a href="https://www.youtube.com/watch?v=NH4y0Z70aFQ" target="_blank" title="책갈피">
       몸값, 비즈니스를 폭발적으로 키우는 PR공식</a><br><br>
 
