--- a/The_economist.html
+++ b/The_economist.html
@@ -51,6 +51,9 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=JDVpv7sjcNE" target="_blank" title="슈카월드">
+    2019년, 엄청난 상승세를 보였으나 차마 손을 뻗지 못했던 주식들</a><br>
+
   <a href="https://www.youtube.com/watch?v=tuoaZfuIi_Y" target="_blank" title="미스터리튜브">
     중국이 급속도로 붕괴되고 있다 - 처참하게 파멸중인 중국, 사회주의의 말로</a><br>
 
