--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -50,6 +50,10 @@
   <h1>The War of Genesis</h1><br><br><br>
 
 
+
+    <a href="https://www.youtube.com/watch?v=5kjrJaFIAls" target="_blank" title="노마드코더">
+      개발자 번아웃 대처방법의 모든 것</a><br>
+
     <a href="https://www.youtube.com/watch?v=BXdUSq8yhH4&list=PLuHgQVnccGMBB348PWRN0fREzYcYgFybf&index=37" target="_blank" title="생활코딩">
       WEB2 JavaScript -37.수업을 마치며</a>
 
