--- a/AI_industry_trends.html
+++ b/AI_industry_trends.html
@@ -51,6 +51,9 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=0NIUVzg7CRk" target="_blank" title="SURPRISER">
+      2020년~2099년 인류 타임라인 - 제 2의 기계 시대</a><br>
+
     <a href="https://www.youtube.com/watch?v=KezI_Lqnj5Q" target="_blank" title="TSP NEWS">
       일론 머스크의 Neuralink, 뇌를 인터넷에 무선연결하는 첨단기술</a><br>
 
