--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -50,6 +50,19 @@
     <h1>Stock Investment</h1><br><br><br>
 
 
+    <a href="https://www.youtube.com/watch?v=xHnBcyNTP48" taregt="_blank" target="시간여행TV">
+      주식회사의 경영권 분쟁에 대해서 알려드립니다</a>
+
+      <p>
+        경영권 분쟁이 주가에 도움이 되는 측면도 있고, 도움이 안되는 측면도 있어요.
+        도움이 되는 측면은 주식을 서로 많이 가지겠다고 싸울 때고,
+        도움이 안되는 측면은 경영권 분쟁이 끝나고 진 측이 주식을 팔고 나가는 경우에요.
+
+        경영권 분쟁이 걸릴 수 있는 요건으로는,
+        시가총액이 적고, 대표이사가 주식을 조금(10~15%) 가지고 있고, 회사에 적자가 없어야 해요.
+        적자가 수백억 이상 되는 회사는 분식회계를 했을 가능성도 있기 때문에 함부로 M&A를 못해요.
+      </p>
+
     <a href="https://www.youtube.com/watch?v=13Bve9a_X2Q" taregt="_blank" target="시간여행TV">
       우리기술투자 1억원 수익실현, 투자아이디어</a>
 
