--- a/Game_industry_trends.html
+++ b/Game_industry_trends.html
@@ -50,6 +50,8 @@
     <h1>Game Industry Trends</h1><br><br><br>
 
 
+    <a href="https://www.youtube.com/watch?v=AYqox5Mf7us&list=WL" target="_blank" title="G식백과">
+      리포지드 깐프사태, 주범을 찾아라</a><br>
 
     <a href="https://www.youtube.com/watch?v=sGQz1Va9nMs" target="_blank" title="흑열전구">
       충격적인 평점 0.5점 짜리 게임, 워크래프트 3 : 리포지드</a><br>
