--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -49,6 +49,76 @@
 
     <h1>Strategy & Tactics</h1><br><br><br>
 
+
+
+
+    <u><위기십결(圍棋十訣)’과 ‘위기오득(圍棋五得)></u><br>
+
+    <p>
+      바둑의 위대한 가르침과 삶 속에서의 유익한 점을 선조들은 ‘위기십결(圍棋十訣)’과 ‘위기오득(圍棋五得)’이라 한다.<br><br>
+
+      당나라 현종 때, 바둑 최고수에게 '기대조(棋待詔)'란 벼슬을 헌정했는데 ‘왕적신(王積薪)’이란 기대조가 ‘바둑이 주는 10가지 가르침’인 “위기십결(圍棋十訣)”을 지었다. 그 10가지 내용이다.<br><br>
+
+      <1訣>...부득탐승(不得貪勝)...‘승리에 집착하지 말라’<br>
+      바둑은 항시 평정심을 가지고 최선의 한 수를 추구하라. 이기려는 마음이 지나치면 욕심이 생긴다. 마음이 흔들리면 통찰의 순간은 오지 않는다. 억지로 이기려는 욕심은 물이 흘러가는 자연의 순리를 거스르기 쉽다. 평상심의 유지가 승리의 비결이다. 이창호 9단은 그의 자서전 제목을 ‘부득탐승’으로 정했다.<br><br>
+
+      <2訣>...입계의완(入界宜緩)...‘상대 진영을 완만하게 들어가라’<br>
+      상대의 진영에 침입하거나 삭감하려면 깊이 들어가지 말라. 상대 세력이 강한 곳에서는 겸허한 자세를 취하라. 새로운 분야에 진입할 때 마땅히 완만한 자세를 취하라는 교훈이다.<br><br>
+
+      <3訣>...공피고아(攻彼顧我)...‘상대를 공격하기 전에 나를 먼저 살펴라’<br>
+      적을 공격할 때엔 먼저 나의 결점 유무와 능력 여부를 살펴라. 스스로 뒤돌아보고 상대로 부터 반격당할 여지가 있는지를 꼼꼼하게 따져라. 상대를 몰아치듯 공격을 할 때에는 감정이 앞서기 쉬우나 냉철하고 비판적으로 자신을 살펴라.<br><br>
+
+      <4訣>...기자쟁선(棄子爭先)...‘희생을 감수하더라도 선수를 잡아라’<br>
+      돌 몇 점을 희생하더라도 선수를 잡는 게 보다 더 중요하다. 선수(先手)란 주도권을 잡기 위해 먼저 착점할 수 있는 권리를 말한다. 기자쟁선의 전략은 ‘버림 돌 작전’이다.<br>
+
+      ‘하수는 돌을 아끼고 상수는 돌을 버린다’는 말이 있다. 전략적으로 희생타를 써서 이익을 보라. 소임을 다한 돌은 그 숫자가 많더라도 가치가 적으며 상대를 차단하고 있거나 대세의 요처는 단 한 점이라도 그 가치가 큰 것이니 전체를 내다보는 안목을 가져라.<br><br>
+
+      <5訣>...사소취대(捨小就大)...‘작은 것은 버리고 큰 것을 취하라’<br>
+      눈앞의 작은 이득을 탐내지 말고 대세를 넓게 보며 움직여라. 바둑을 두다 보면 쉽지 않은 것이 ‘사소취대’이다. 작은 이익은 잘 보이지만 큰 이익은 멀리 보인다. 미래를 냉철하게 보며 작은 이익을 과감히 포기하기는 어렵다. 소탐대실(小貪大失)의 동의어이다.<br><br>
+
+      <6訣>...봉위수기(逢危須棄)...‘위험을 만나면 모름지기 버릴 줄 알라’<br>
+      위험에 처하면 벗어나기 위해 탈출해야 한다. 바둑을 두다가 양곤마가 되어 쫓기게 될 경우가 있고 미생(未生)이 여러 개 뜰 때도 있다.<br>
+
+      이 미생을 도저히 살릴 가능성이 없거나, 혹은 살더라도 작게 살 수밖에 없거나 삶의 대가를 크게 지불해야 할 때에는 과감히 버려라. 중대한 결단의 시기는 빠를수록 이롭다.<br><br>
+
+      <7訣>...신물경속(愼勿輕速)...‘신중하라, 경솔하거나 서두르지 말라’<br>
+      바둑을 경솔하게 빨리 두지 말라. 한 수, 한 수를 신중하게 생각하며 두라. 감각이 좋은 사람은 착수를 결정할 때 고민을 하지 않는 속기파이다. 그러나 지나치게 빠른 착점은 수읽기를 덜 할 수밖에 없어 착각과 실수가 뒤따른다.<br><br>
+
+      <8訣>...동수상응(動須相應)...‘마땅히 서로 호응하도록 움직여라’<br>
+      바둑돌 하나, 하나가 서로 유기적인 관계를 형성하므로 착점을 결정하기 전에 자기편 돌의 능률을 생각하며 상대편의 움직임까지 고려해야 한다.<br>
+
+      행마를 할 때에는 모름지기 기착점들이 서로 연관되게 호응을 하면서 이끌어 가라. 착수된 돌들도 상황에 따라 역할이 시시각각으로 변한다. ‘바둑은 살아 움직이는 유기체’이다.<br><br>
+
+      <9訣>...피강자보(彼强自保)...‘적이 강하면 나부터 지켜라’<br>
+      주위의 적이 강한 경우에는 우선 내 돌을 먼저 보살펴야 한다.
+      상대의 집이 커 보인다고 해서 마구잡이로 뛰어들거나 내 돌의 약점이 많은 곳에서 무모한 싸움을 벌이는 것은 패배의 지름길이다.<br><br>
+
+      <10訣>...세고취화(勢孤取和)...‘세력이 고립되면 조화를 취하라’<br>
+      상대 세력 속에 고립될 경우에는 신속히 안정의 길을 찾고, 화평을 구하라. 최후의 승리를 위해 순간의 굴욕을 감수하라.<br><br>
+
+
+      바둑을 두면 5가지 좋은 점을 얻는다는 “위기오득(圍棋五得)”이다.<br><br>
+
+      <1得>...득호우(得好友)...‘바둑을 통해서 좋은 벗을 얻는다’<br>
+      바둑을 두려고 마주 앉으면 이미 좋은 친구다. 또한 서로를 배려하며 바둑을 두는 모습은 참으로 아름답다. 공명정대하게 승패를 다투는 바둑은 승부를 통해 우정을 다지며 벗을 만드는 장점이 있다.<br><br>
+
+      <2得>...득심오(得心悟)...‘오묘한 삶의 이치를 깨우친다’<br>
+      바둑은 승패를 다투면서도 조화를 이루며 그 과정 속에서 예술과 사유가 발생하니 대국 중에 저절로 오묘한 삶의 이치를 터득한다.<br><br>
+
+      <3得>...득인화(得人和)...‘사람들과 화합할 수 있다’<br>
+      바둑으로 사람들과 교분을 나누니 저절로 인화를 얻을 수 있다. 바둑판 앞에서는 나이도, 성별도, 직업도 그 어떤 차별이 없이 동등하게 흑과 백으로 마주앉는다. 바둑을 세계 평화의 도구라고 한다.<br><br>
+
+      <4得>...득교훈(得敎訓)...‘인생의 교훈을 얻을 수 있다’<br>
+      바둑은 인생의 축소판이다. 인생은 과거로 되돌릴 수 없지만 바둑은 ‘복기(復棋)’할 수 있어서 반성할 수가 있다. 바둑은 보다 더 알차고 풍성한 삶의 기회를 준다.<br><br>
+
+      <5得>...득천수(得天壽)...‘바둑을 두면 천수(天壽)를 누릴 수 있다’<br>
+      위의 1~4得 다음에 따라오는 것은 ‘천수를 누리는 것’이다.<br><br>
+
+      역사상 최초의 바둑책인 '기지(碁旨)'를 쓴 ‘반고(班固)‘의 말이다. "우주 대자연의 음양원리를 원용한 바둑은 상대성을 추구하는 놀이다. 이를 즐기며 체득하는 동안, 인간은 우주 원리에 순응하는 법을 알게 되고 그로써 수명을 늘려 장수할 수 있게 될 것이다."<br><br>
+
+      언제, 어디서나 생존경쟁 사회에서 생존하려면 바둑의 ‘위기십결’과 ‘위기오득’을 알아야 한다. 바둑이 인간에게 주는 인생 교훈이다.
+    </p>
+
     <a href="https://www.youtube.com/watch?v=zADn1a0rzr8" target="_blank" title="별별역사">
       알렉산더 대왕의 정복전쟁(2) : 페르시아 정복과 원정의 결말</a><br>
 
