--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -50,6 +50,117 @@
     <h1>Stock Investment</h1><br><br><br>
 
 
+
+    <a href="https://www.youtube.com/watch?v=-73_Y4hT2Zw" taregt="_blank" target="시간여행TV">
+      구독자 2만명 달성 기념 이벤트!!!<a><br>
+
+    <a href="https://www.youtube.com/watch?v=bM3QywmKRBc" taregt="_blank" target="시간여행TV">
+      주식투자로 30억을 버는 가장 빠른 방법 -소형주 매매 2편</a>
+
+      <p>
+        제가 52주 최저가를 찍는 종목을 산다고 했잖아요.
+        그건 52주 최저가를 찍는 종목을 무조건 산다는 게 아니라,
+        관심 가지고 있는 종목을 관심종목에 넣어놨다가
+        그 종목이 52주 최저가를 찍으면 그 때 매수를 고려한다는 의미에요.
+        저는 일단 52주 신고가를 찍으면 무조건 매도를 하고요.
+        52주 신저가 종목만 사는데
+        52주 신저가 종목을 무조건 사는게 아니라
+        미리 관심 종목으로 넣어둔 종목들 중에 52주 최저가를 찍는 경우에 매입을 고려해요.
+
+        어떤 테마의 대장주인데 망할 회사도 아니고 배당도 잘주는 종목을 구입하는게 제 투자 아이디어에요.
+
+        좋은 회사이면서 좋은 주식이면서 좋은 가격인 종목을 사야해요.
+        이 3박자가 맞지 않으면 장기간 수익을 낼 수 없어요.
+
+        "공포에 사서 환희에 팔라" - 국민연금식 매매
+
+        이미 해먹고 나간 종목인지를 판단하는 방법.
+        거래원 정보에서 이상한 창구에서 누군가가 순매수만 했다면 그건 해먹고 나간건 아니다.
+        반면에 매수랑 매도 창구가 똑같은 경우는 해먹고 나간거에요.
+      </p>
+
+    <a href="https://www.youtube.com/watch?v=5SNoyrdNtJM" taregt="_blank" target="시간여행TV">
+      주식으로 30억을 버는 가장 빠른 방법 -소형주 매매 1편</a>
+
+      <p>
+        시가총액 낮은 종목 순서대로 보도록 할게요.
+        스펙주들 중에서 2100원 넘는 종목들은 일단 다 거르는 게 좋아요.
+        사실 시장 상황이 진짜 안좋은 게 아니면 스펙주는 살 이유가 없어요.
+        스펙주를 사야할 때는 우선주 10개 정도 상한가 가는 그런 시즌 밖에 없어요.
+        그런 시즌에는 우선주 끝나면 바로 스펙주거든요.
+        물론 인수합병을 앞두고 있거나 인수합병 계획 중인 스펙주는 좋아보이면 살 수도 있죠.
+        재무제표에서 3년 이상 빨간색이 찍혀있는 종목들은 조심하셔야 합니다. 언제 상장폐지 당해도 이상하지 않아요.
+
+        제조업 회사들이 3-4년 연속 적자면 꺼리게 되거든요.
+        근데 바이오 제약 회사들은 3-4년 적자라도 이상하게 관심이 가는 종목들이 꽤 있어요.
+
+        기업의 재무제표가 받쳐줘야지 세력들이 있는거거든요.
+        언제 망할지 모르는 회사는 무서워서 세력들이 못있어요.
+        최근 여섯 분기 정도 적자거나 최근 3년 동안 적자면 무조건 거르는 게 좋아요.
+
+        사실 시가총액 200억 미만 회사 중에는 좋아보이는 회사가 거의 없어요.
+
+        관리종목 중에서도 관리종목이 풀릴 것 같은 느낌을 주는 회사가 있어요.
+        예를 들면 4년 연속으로 적자를 봤는데 3분기 연속 흑자를 내고 한 분기만 더 흑자를 내면 관리종목이 풀릴 것 같은 회사가 있어요.
+        그런 느낌의 회사를 발굴해야지 관리종목이라고 투자를 하면 보통 10개 중에 8-9개는 상장폐지를 당하더라고요.
+        4년 연속 적자를 보면 관리 종목이 되고, 5년 연속 적자를 보면 상장 폐지가 돼요.
+
+        흑자였다가 갑자기 적자로 바뀌는 종목들도 굉장히 조심해야 합니다.
+
+        전환사채랑 유상증자 발행하는 회사들도 정말 조심해야 하고요.
+        새로운 주식들이 계속해서 발행되는 회사들이 있어요.
+        그런 회사들은 여러분들이 보유한 주식의 가치를 계속 떨어뜨리기 때문에 그 가격에 사줄 이유가 없어요.
+
+        그리고 시가총액 낮은 종목들은 거래량이 없는 게 정상이에요.
+        시가총액이 낮다는 자체가 이미 시장의 외면을 받은 상태기 때문이에요.
+        근데 시가총액이 낮은데 거래량이 몇십억씩 매일 터지는 경우는 세력이 매집을 하고 있다고 보시면 되요.
+      </p>
+
+    <a href="https://www.youtube.com/watch?v=_mUIhmyh_OI" taregt="_blank" target="시간여행TV">
+      헝셩그룹 1억 수익실현 투자아이디어</a>
+
+      <p>
+        테마가 2개 이상씩 걸려있는 종목들이 가끔 있는데 그런 종목들은 세력이 있는거에요.
+        주가를 올리기 위해서는 돈이랑 명분이 필요하거든요.
+        돈은 세력들에게 있는거니 뭐라도 끼워맞춰서 명분을 만들게 되는거에요.
+        상방이든 하방이든, 돈을 벌든 잃든 주식을 빨리 사고 팔고 싶다 하시는 분들은 테마가 2-3개 걸려있는 종목이 좋아요.
+        그런데 주의하셔야 할 게, 테마가 2개 걸려있는 경우는 그 중 어느 하나의 테마도 대장주인 경우는 거의 없어요.
+      </p>
+
+
+    <a href="https://www.youtube.com/watch?v=WjRKN3tb_n4" taregt="_blank" target="시간여행TV">
+      정치테마주에도 우선순위가 있다?</a>
+
+      <p>
+        1순위: 본인의 경영경험, 사외이사 경험, 지분을 가지고 있다, 가족의 경영 혹은 재 -> 보통 가장 큰 폭으로 가장 빠르게 반응<br>
+
+        2순위: 과거 어떤 정치인의 대장주였던 종목, 조금은 먼 친척이 운영하거나 사외이사로 있는 회사<br>
+        과거에 대장주였다는 건, 처음에는 세력이 있어서 대장주가 되었던 건 4,5년 후에 세력은 없지만 과거의 개미투자자들이 학습효과로 인해 대장주로 생각해서 사는 경우가 있어요.<br>
+
+        3순위: 고등학교 동문<br>
+        굳이 엮자면 시가총액 1천억 미만 종목들은 고교동문 정도면 상한가 1,2번 정도는 갈만해요.<br>
+
+        4순위: 직장동료, 사법 연수원 동기(대학교 동기)<br>
+
+        1,2순위 테마들은 시가총액이 1천억 이상이라도 상관이 없거든요. 근데 3,4순위 종목은 제 개인적인 기준으로는 시가총액 1천억 이상이면 좀 움직이기가 많이 힘들어요.<br>
+
+        그리고 정책주의 경우는 일회용으로 한두 번 해먹은 다음 나가는거지 몇 년 내내 우려먹고 할 테마주는 아니에요.
+
+        근데 가족이나 본인이 운영하는 회사의 테마주는 몇배 상승을 하더라도 계속 이어지는 경우가 많더라고요.<br>
+
+        미국이나 일본에도 정치테마주는 있어요.<br>
+        미국이나 일본: 공약 위주의 테마주 / 한국: 인맥주<br>
+
+        그리고 정치테마주 돌아가는 속도가 이번이(2019/11/12) 좀 빨라요. 왜냐면 내후년 부터는 대주주 양도소득세 기준이 강화되기 때문에 한 종목당 별로 안들고 있어도 대주주로 분류돼 22% 양도소득세 내야하거든요.
+        그거를 회피하려는 심리 때문인지는 모르겠는데 정치테마주가 굉장히 빨리 돌아가고 있고, 그래서 내년 선거가 약간 기다려지는 것 같아요.<br>
+
+        정치테마주는 여러분들이 응원하는 사람의 종목을 사는 게 아니라 정치테마주는 지지율 순서대로 돌아가거든요.
+        보통은 야당 1위랑 여당 1위 테마주 먼저 돌아가긴 하는데,
+        그 밑에 후보들 테마주도 한 번씩 기회는 줘요.
+        저는 지지율 3,4,5위 후보 테마주를 먼저 보는 이유가, 그 후보의 테마주들은 완전하게 저점을 잡을 수 있다 판단이 들어요.
+        왜냐면 이미 안올라서 잘 안움직이기 때문이에요.
+      </p>
+
     <a href="https://www.youtube.com/watch?v=xHnBcyNTP48" taregt="_blank" target="시간여행TV">
       주식회사의 경영권 분쟁에 대해서 알려드립니다</a>
 
