--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -51,6 +51,9 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=gk6faxfO_xM" target="_blank" title="바둑학원">
+      [바둑]상대방 집을 줄이거나 나의 집을 최대한 늘리는 방법 #2</a><br><br>
+
 
     <u><위기십결(圍棋十訣)’과 ‘위기오득(圍棋五得)></u><br>
 
