--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -51,8 +51,54 @@
 
 
 
+    <a href="https://www.youtube.com/channel/UCcKZp7rqL8oOXv4O57L3xSg/videos" taregt="_blank" target="시간여행TV">
+      100억 전업투자자가 알려주는 주식 이야기</a><br>
+
+      <p>
+        제감 지금 테마주 스윙 위주로 매매를 하는 이유가
+        2019년 11월 한국 주식시장에서 이게 가장 최적화된 방법이라는 걸 깨달아서 그런거에요.
+        장기 투자하는 경우 손절구간이 길어지는 상황을 피하기 위해
+        크지 않더라도 수익 줄 때 파는게 낫겠다는 생각을 하게 되었어요.<br>
+
+        * 물리지 않는 매매를 해야해한다.<br>
+
+        10년 동안 자기가 산 가격이 안 온 종목들이 꽤 많아요.
+        그런 종목들을 피해가는게 중요한데
+        저 같은 경우에는 1년 사이에 3배 이상 오르거나 6개월 사 2배 이상 오른 종목은 절대 안사요.
+        이렇게 하면 매매해서 성공할 확률도 올라가고,
+        만약에 물린다 하더라 6개월 내로 탈출할 기회를 주는 경우가 많아요.<br>
+
+        * 주식은 패턴의 반복과 변형이다.<br>
+        예를 들어 과거에 나온 패턴 중에
+        조류독감, 대북테마주, 정치테마주, 미세먼지주, 저출산테마주, 일자리테마주, 교육주 이런 것들이 있어요.
+        이런 테마주들이 한 번씩 터질 때마다
+        어떤 종목들이 해당 테마에 편입돼있고
+        어떤 종목이 테마에서 힘이 가장 센지 그런걸 공부하고,
+        미래에 어떤 이슈가 터지면
+        누구보다 빠르게 과거에 힘이 실렸던 종목을 매수하거나
+        미리 매수해두고 이슈가 터질 때까지 기다리면 대부분 수익을 낼 수 있어요.
+        이번 대선 때는 어떤 종목이 저점에서 5-10배 상승할 수 있겠다라는 생각을 각자 하나씩은 머리속에 넣어놔야 돼요.
+        그게 대선테마주를 대하는 올바른 자세에요.
+        상한가 간 종목을 상한가에 매수를 해서 단타 5-10% 먹고 나오면
+        그건 잘한게 아니에요.<br>
+
+        시가총액 5천억짜리 회사가 있어요.
+        이 회사가 시가총액 3조짜리 회사가 되려면 2조 5천억의 자본이 투입되어야 하는게 아니라 주가가 5-6배 오르면 돼요.
+        그게 어떻게 결정되냐면, 상황에 따라 다르고 종목에 따라 다르지만,
+        투자심리가 좋은 종목은 적은 돈으로도 주가가 크게 올라요.
+        반면에 투자심리가 악화된 종목들은 4-5배는 커녕 1%도 올리기 힘든 경우가 많아요.
+        투자심리는 보통 재료로 결정이 되고요.
+        그래서 재료가 최상급이고 비교가 불가능한 신선한 종목을 매매해야 해요.
+        시가총액 5천억짜리 회사가 임상 찌라시 관련해 3조가 되었다고 칠게요.
+        그런데 나중에 임상에 실패했을 2조 5천억의 자금이 빠져나가야지 시가총액 5천억이 되는게 아니라,
+        실제로는 500-1000억만 빠져나가도 크게 폭락할 수가 있어요.
+        하한가 여러번 가는 종목들 보면 하한가 거래량 없이 쭉 빠지는 종목들 있잖아요.
+        하한가 없이 빠지는 종목은 진짜 위험한거에요.
+        기대감으로 오르는 종목은 재료가 소멸하거나 안좋은 이슈로 마무리가 되었다면 지체없이 누구보다 빠르게 매도하고 나가야돼요.
+      </p>
+
     <a href="https://www.youtube.com/watch?v=-73_Y4hT2Zw" taregt="_blank" target="시간여행TV">
-      구독자 2만명 달성 기념 이벤트!!!<a><br>
+      구독자 2만명 달성 기념 이벤트!!!</a><br>
 
     <a href="https://www.youtube.com/watch?v=bM3QywmKRBc" taregt="_blank" target="시간여행TV">
       주식투자로 30억을 버는 가장 빠른 방법 -소형주 매매 2편</a>
