--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -51,9 +51,12 @@
 
 
 
+
+    <a href="https://www.youtube.com/watch?v=z3a-IicE3ZA" target="_blank" title="바둑학원">
+      [장기]초반의 중요성!! 초반에 밀리면 완전 녹아용</a><br>
+
     <a href="https://www.youtube.com/watch?v=gk6faxfO_xM" target="_blank" title="바둑학원">
       [바둑]상대방 집을 줄이거나 나의 집을 최대한 늘리는 방법 #2</a><br><br>
-
 
     <u><위기십결(圍棋十訣)’과 ‘위기오득(圍棋五得)></u><br>
 
