--- a/The_economist.html
+++ b/The_economist.html
@@ -51,6 +51,9 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=ZRdEvpm-FLk" target="_blank" title="슈카월드">
+    "이 세상 주식이 아니다" 폭주하는 테슬라와 패닉에 빠진 공매도</a><br>
+
   <a href="https://www.youtube.com/watch?v=JDVpv7sjcNE" target="_blank" title="슈카월드">
     2019년, 엄청난 상승세를 보였으나 차마 손을 뻗지 못했던 주식들</a><br>
 
