--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -89,7 +89,8 @@
     <h3><strong>소설</h3></strong>
       [82년생 김지영]-조남주<br>
       [잠]-베르나르 베르베르<br>
-      [삼국지]-나관중
+      [삼국지]-나관중<br>
+      [데미안]-헤르만 헤세
     <h3><strong>자기계발</h3></strong>
       [기획자의 습관]-최장순
     <h3><strong>에세이</h3></strong>
@@ -108,6 +109,7 @@
         <li>에세이: [이창호의 부득탐승]-이창호</li>
         <br>
         <li>경영: [채리티:워터]-스캇 해리슨</li>
+        <li>소설: [데미안]-헤르만 헤세</li>
 
     </p></pre>
 
