--- a/Science_and_technology.html
+++ b/Science_and_technology.html
@@ -50,9 +50,14 @@
   <h1>Science & Technology</h1><br><br><br>
 
 
+    <a href="https://www.youtube.com/watch?v=8cxP74c3aWs" target="_blank" title="SURPRISER">
+      텔레파시 통신 혁명이 온다</a><br>
 
-  <a href="https://www.youtube.com/watch?v=vNmOQFcZyCI" target="_blank" title="TSP NEWS">
-    세계 최초의 살아있는 로봇을 미국 군사 연구소 DARPA에서 개발</a><br>
+    <a href="https://www.youtube.com/watch?v=xoBolkkmmOY" target="_blank" title="지식보관소">
+      다중우주론 중에 일반 대중들이 가장 흥미로워한다는 시뮬레이션 다중우주</a><br>
+
+    <a href="https://www.youtube.com/watch?v=vNmOQFcZyCI" target="_blank" title="TSP NEWS">
+      세계 최초의 살아있는 로봇을 미국 군사 연구소 DARPA에서 개발</a><br>
 
     <a href="https://www.youtube.com/watch?v=SBpl3ThhhaI" target="_blank" title="1분과학">
       다함께 만드는 신</a><br>
