--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -50,6 +50,8 @@
     <h1>Show Yourself</h1><br><br><br>
 
 
+    <a href="https://www.youtube.com/watch?v=kp5CEADyTFs&list=WL&index=1" target="_blank" title="더나은삶TV">
+      회사에서 착한 사람이 안 통하는 이유</a><br>
 
     <a href="https://www.youtube.com/watch?v=U8Bx8Y6LHZU" target="_blank" title="더나은삶TV">
       모든 종교를 하나로 연결하여 얻은 미친 지혜</a><br>
