--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -51,6 +51,8 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=HvnvKNZNQjw" target="_blank" title="알로직">
+      [스타2]초보들이 무조건 알아야 할 세 가지 기본기 강좌</a><br>
 
     <a href="https://www.youtube.com/watch?v=z3a-IicE3ZA" target="_blank" title="바둑학원">
       [장기]초반의 중요성!! 초반에 밀리면 완전 녹아용</a><br>
