--- a/懲毖錄.html
+++ b/懲毖錄.html
@@ -54,6 +54,17 @@
 
 
 
+    [Fabruary 12th, 2020]
+      <p>
+        계좌에 잔고가 있는 것 자체는 결코 기회비용을 발생시키는 리스크가 아니다.
+        매도 후 잔고가 생기자마자 심사숙고 없이 최적의 조건을 갖추지 않은 종목을 매입하는 것이야말로 큰 리스크를 발생시킨다.
+        그 종목에 묶여서 다른 큰 기회가 왔을 때 잡지 못하는 리스크를 감수해서는 안된다.<br><br>
+
+        나에게는 언제나 12척의 판옥선만 존재한다. 단 한 척의 배도 잃어서는 안된다. 손실 없이 대승을 보장하는 전투가 아니면 시작하지 않는다.<br><br>
+
+        승패를 가늠할 수 없는 전장에 직접 뛰어들지 말고, 다른 이들의 전투를 관전하며 경험을 축적하라.
+      </p>
+
     [Fabruary 7th, 2020]
       <p>
         나는 내가 하는 일을 기록으로 남기는 사람이 아니라,<br>
