--- a/Science_and_technology.html
+++ b/Science_and_technology.html
@@ -50,6 +50,16 @@
   <h1>Science & Technology</h1><br><br><br>
 
 
+
+    <a href="https://www.youtube.com/watch?v=jWs7k3kGqgI" target="_blank" title="에스오디">
+      우리나라 공학자들이 만들어낸 미친 신기술! 단 한방울의 물로 전기를 만들어버리다</a><br>
+
+    <a href="https://www.youtube.com/watch?v=MxGeR1WdNkM" target="_blank" title="신박과학">
+      빅뱅 이전에 존재했던 별 "므두셀라"</a><br>
+
+    <a href="https://www.youtube.com/watch?v=ErWEq8sZGGU" target="_blank" title="지식보관소">
+      우주(시공간) 밖은 어떻게 생겼을까?</a><br>
+
     <a href="https://www.youtube.com/watch?v=8cxP74c3aWs" target="_blank" title="SURPRISER">
       텔레파시 통신 혁명이 온다</a><br>
 
