--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -50,6 +50,12 @@
     <h1>Show Yourself</h1><br><br><br>
 
 
+    <a href="https://www.youtube.com/watch?v=DFbVV-rQxak" target="_blank" title="라이프해커자청">
+      연봉 10억을 만들어준 심리학 5개, 4편 뇌욕망의 비밀을 풀다</a><br>
+
+    <a href="https://www.youtube.com/watch?v=LWn6Vry1KKQ" target="_blank" title="주먹쥐고일어서">
+      [ 1부 ] '가슴뛰는 삶을 살아라' 다릴 앙카 신은 항상 우리에게 얘기하고 있었다</a><br>
+
     <a href="https://www.youtube.com/watch?v=kp5CEADyTFs&list=WL&index=1" target="_blank" title="더나은삶TV">
       회사에서 착한 사람이 안 통하는 이유</a><br>
 
