--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -51,6 +51,12 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=YhYMUQfbVx8" taregt="_blank" target="시간여행TV">
+      팍스넷 하한가, 충분히 예고되었던 참사</a><br>
+
+    <a href="https://www.youtube.com/watch?v=BV72ozbImhc" taregt="_blank" target="시간여행TV">
+      이낙연 테마주 폭락 분석 SDN,남화산업,남화토건,이월드,장원테크,금호전기,우원개발,남선알미늄</a><br>
+
     <a href="https://www.youtube.com/channel/UCcKZp7rqL8oOXv4O57L3xSg/videos" taregt="_blank" target="시간여행TV">
       100억 전업투자자가 알려주는 주식 이야기</a><br>
 
