--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -51,6 +51,30 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=WnhM3hQ-5oE" target="_blank" title="슈비이닝장기">
+      [장기]어느쪽 졸병을 열어야 할까?</a><br>
+
+      <p>
+        차가 혼자서는 공격할 수 없다.
+        항상 뒤에 뒷받침 해주는 기물이 있어야 한다.
+        초반에는 멀리 뛸 수 있는 상길을 조심해야 한다.
+
+        귀마 대 귀마에서 초를 잡은 경우는 보통 귀마쪽 졸을 열고 시작한다.
+        반대편 차와 병을 묶어두는 의미다.
+
+        마는 차길 연 반대쪽 마가 주로 나간다.
+        차길 쪽 마가 나가고 면포가 이루어지면 반대편 차와 병을 묶지 못하기 때문이다.
+
+        상대 한이 원앙마 안상차림인 경우는 귀마 반대쪽을 연다.
+        상대가 반대쪽 차길을 열게 되었을 때 초의 상길이 많아져서 두기 수월하다.
+
+        상대가 뒀을 때 좋은 수를 사전에 차단하는 것이 좋은 수다.
+
+        귀마 상대로 원앙을 잡았을 땐 상대 귀마 반대쪽 차길을 여는게 좋다.
+
+        양귀마 상대일 때는 마찬가지로 귀마쪽 차길을 열거나, 차길을 안열고 마가 나가도 좋다.
+      </p>
+
     <a href="https://www.youtube.com/watch?v=HvnvKNZNQjw" target="_blank" title="알로직">
       [스타2]초보들이 무조건 알아야 할 세 가지 기본기 강좌</a><br>
 
