--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -63,12 +63,14 @@
       [주식투자 매도하는 법부터 배워라]-김중근<br>
       [전설로 떠나는 월가의 영웅]-피터 린치<br>
       [기업공시 완전 정복]-김수헌<br>
-      [알아두면 쓸모 있는 IT 상식]-정철환
+      [알아두면 쓸모 있는 IT 상식]-정철환<br>
+      [빅데이터, 사람을 읽다]-BC카드 빅데이터센터
 
     <h3><strong>역사</h3></strong>
       [거의 모든 IT의 역사]-정지훈<br>
       [약자를 위한 현실주의]-이주희<br>
-      [알렉산드로스 제국의 눈물]-제임스 롬
+      [알렉산드로스 제국의 눈물]-제임스 롬<br>
+      [하멜표류기]-헨드릭 하멜
     <h3><strong>철학</h3></strong>
       [내 안의 나를 깨우는 장자 외편]-장자<br>
       [그래서 철학이 필요해]-고바야시 쇼테이
@@ -101,15 +103,15 @@
     <p><pre>
       <h2>2020년 2월 독서</h2>
         <li>경제/경영: [알아두면 쓸모 있는 IT 상식]-정철환</li>
-        <li>역사:</li>
+        <li>역사:[하멜표류기]-헨드릭 하멜</li>
         <li>철학:</li>
         <li>심리학/처세술: [호감 가는 대화에는 8가지 절대법칙이 있다]-스쿤</li>
         <li>과학:</li>
         <br>
         <li>에세이: [이창호의 부득탐승]-이창호</li>
-        <br>
         <li>경영: [채리티:워터]-스캇 해리슨</li>
         <li>소설: [데미안]-헤르만 헤세</li>
+        <li>경제: [빅데이터, 사람을 읽다]-BC카드 빅데이터센터</li>
 
     </p></pre>
 
